[package]
name = "bevy-snapolation"
version = "0.1.0"
authors = ["hazelnutcloud <hzlntcld@gmail.com>"]
edition = "2021"
description = "a snapshot interpolation library for bevy"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
