[package]
name = "bevy-snapolation"
version = "0.2.0"
authors = ["hazelnutcloud <hzlntcld@gmail.com>"]
edition = "2021"
description = "a snapshot interpolation library for bevy"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
